[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-security-audit-tool"
version = "0.1.1"
description = "Comprehensive Linux security auditing and hardening tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Dario Clavijo", email = "clavijodario@gmail.com"}]
dependencies = ["jinja2>=3.0.0", "tabulate>=0.9.0", "weasyprint>=60.0"]

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = ["ruff", "mypy"]
all = ["linux-security-audit-tool[cli,dev,test,lint]"]

[project.scripts]
security-audit = "security_audit.cli:main"

[project.urls]
Homepage = "https://github.com/daedalus/linux-security-audit-tool"
Repository = "https://github.com/daedalus/linux-security-audit-tool"
Issues = "https://github.com/daedalus/linux-security-audit-tool/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/security_audit"]

[tool.hatch.build.targets.sdist]
include = ["src/security_audit"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=security_audit"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["security_audit"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]